@@ -1,0 +1,12 @@
+/**
+ * Main SMSD program
+ */
+/* Copyright (c) 2009 Michal Cihar <michal@cihar.com> */
+
+#include "gammu-smsd.h"
+
+int main(int argc, char **argv)
+{
+	SMSDaemon(argc, argv);
+	return 0;
+}
